# renfield-mcp-dlna

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
scripts/: validate_live.py  validate_openhome_kueche.py
src/renfield_mcp_dlna/: __init__.py  __main__.py  control_point.py  didl.py  discovery.py  mediaserver.py  metadata.py  queue_manager.py  server.py
src/renfield_mcp_dlna/backends/: __init__.py  avtransport.py  base.py  openhome.py  sonos.py
tasks/: todo.md
tests/: test_server.py
